--- a/package.json
+++ b/package.json
@@ -9,16 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react-datepicker": "^6.2.0",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.2",
+    "deepdash-es": "^5.3.9",
+    "easy-peasy": "^6.0.4",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.0.14",
+    "jsonwebtoken": "^9.0.2",
+    "localforage": "^1.10.0",
+    "lodash-es": "^4.17.21",
+    "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
+    "mongoose": "^8.2.2",
+    "next": "14.1.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.5.0",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "sort-by": "^1.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "typescript": "^5"
   }
 }
