--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "react-top-loading-bar": "^2.3.1",
     "sort-by": "^1.2.0",
     "xlsx": "^0.18.5"
   },
