--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
